--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Golden Apple Technologies</title>
 <link rel="icon" type="image/ico" href="favicon.ico">
-<meta name="description" 
+<meta name="description" content="Golden Apple Technologies offers a comprehensive range of services including custom software development, IT consulting, digital transformation, cybersecurity, and cloud services, leveraging agile methodologies and a client-centric approach to deliver high-quality solutions that meet the unique needs of businesses and individuals, while our team of experts in software development, UX/UI design, quality assurance, and project management work together to drive innovation and growth, supported by a knowledge base, community forum, resource library, FAQ section, contact form, user profile management, password recovery, search functionality, and feedback mechanism that enhance user experience and provide valuable information.">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
