--- a/drive.html
+++ b/drive.html
@@ -5,32 +5,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Goldrive - File Manager</title>
   <link rel="stylesheet" href="drive.css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
   <main class="container">
     <header class="header">
-      <h1>Goldrive</h1>
+      <h1><i class="fas fa-cloud"></i> Goldrive</h1>
       <p>Browser-based File Manager</p>
       <p><a href="accounts.html" class="link">Switch Account</a></p>
     </header>
 
-    <section class="file-manager">
-      <div class="upload-section">
-        <h2>Upload Files</h2>
-        <input type="file" id="fileInput" multiple />
-        <button class="btn upload-btn" onclick="uploadFiles()">Upload Files</button>
-        <p class="note">Note: Files are stored in your browser only</p>
-      </div>
-
-      <div class="files-section">
-        <h2>Your Files</h2>
-        <div id="filesList" class="files-list">
-          <p>Loading files...</p>
-        </div>
+    <section class="upload-section">
+      <h2><i class="fas fa-upload"></i> Upload Files</h2>
+      <input type="file" id="fileInput" multiple />
+      <button class="btn upload-btn" onclick="uploadFiles()">Upload Files</button>
+      <p class="note">Note: Files are stored in your browser only</p>
+      <div class="storage-info">
+        <label>Storage Used:</label>
+        <progress id="storageBar" value="0" max="100"></progress>
+        <span id="storageText">0 MB / 5 MB</span>
       </div>
     </section>
+
+    <section class="files-section">
+      <h2><i class="fas fa-folder-open"></i> Your Files</h2>
+      <input type="text" id="searchInput" placeholder="Search files..." oninput="filterFiles()" />
+      <div id="filesList" class="files-list">
+        <p>Loading files...</p>
+      </div>
+    </section>
+
+    <!-- File Preview Modal -->
+    <div id="previewModal" class="modal" hidden>
+      <div class="modal-content">
+        <span class="close-btn" onclick="closePreview()">✖</span>
+        <h3>File Preview</h3>
+        <div id="previewContent"></div>
+      </div>
+    </div>
   </main>
 
   <script src="drive.js"></script>
 </body>
-</html>
+</html>B4%A0%E6%B0%B4%E5%B9%B3
