--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="features-grid">
         <a class="feature-link" href="qrcode.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-qrcode"></i></div>QR CODE</div></a>
         <a class="feature-link" href="checkers.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-save"></i></div>DOCUMENT CREATOR</div></a>
+        <a class="feature-link" href="compiler_html.html"><div class="feature-card"><div class="feature-icon"><i class="fab fa-html5"></i></div>HTML COMPILER</div></a>
         <a class="feature-link" href="barcode.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-barcode"></i></div>BAR CODE</div></a>
         <a class="feature-link" href="dictionary.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-book"></i></div>ONLINE DICTIONARY</div></a>
         <a class="feature-link" href="live.html"><div class="feature-card"><div class="feature-icon"><i class="fas fa-camera"></i></div>GOLDEN CAM</div></a>
