--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
   <div id="modal" class="modal">
     <div class="modal-content">
       <ul class="modal-list">
-        <a href="https://wandbox.org/#"><li><i class="fas fa-file-code"></i> Compiler- Test your coding skills</li></a>
-       <a href="coder.html"><li><i class="fas fa-robot"></i> Coddit AI</li></a>
+        <a href="https://wandbox.org/#"><li><i class="fas fa-file-code"></i> Wandbox Universal Compiler</li></a>
+       <a href="coder.html"><li><i class="fas fa-robot"></i> Coddit AI Gen 1</li></a>
       <a href="comments.html"><li><i class="fas fa-message"></i> User Experience - Feedback</li></a>
-      <a href="about.html"><li><i class="fas fa-phone"></i> Contact Golden Apple</li></a>
+      <a href="about.html"><li><i class="fas fa-phone"></i> About The Developers</li></a>
       </ul>
       <button class="close-btn" onclick="hideModal()">Close</button>
     </div>
