--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Golden Apple Technologies - Programmer's Hub & Developer Tools</title>
-    <meta name="description" content="Golden Apple Technologies - A comprehensive developer hub with QR generators, code compilers, AI coding assistants, document tools, and more. Inspire your development journey.">
+    <title>Golden Apple Technologies </title>
+    <meta name="description" content="Golden Apple Technologies - A Great Team Of Developers, Code Oriented, Delighted to teach Programming To All">
     <meta name="keywords" content="programmer tools, QR code generator, barcode generator, HTML compiler, AI coding assistant, developer resources, coding inspiration, Golden Apple Technologies">
     <meta name="author" content="Golden Apple Technologies">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
     <meta property="og:title" content="Golden Apple Technologies - Programmer's Hub & Developer Tools">
-    <meta property="og:description" content="A comprehensive developer hub with QR generators, code compilers, AI coding assistants, document tools, and more.">
+    <meta property="og:description" content="Golden Apple Technologies - A Great Team Of Developers, Code Oriented, Delighted to teach Programming To All">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://goldenapplecoders-coder.github.io">
     <meta property="og:image" content="https://goldenapplecoders-coder.github.io/favicon.ico">
     <meta property="og:site_name" content="Golden Apple Technologies">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Golden Apple Technologies - Programmer's Hub & Developer Tools">
-    <meta name="twitter:description" content="A comprehensive developer hub with QR generators, code compilers, AI coding assistants, document tools, and more.">
+    <meta name="twitter:title" content="Golden Apple Technologies">
+    <meta name="twitter:description" content="Golden Apple Technologies - A Great Team Of Developers, Code Oriented, Delighted to teach Programming To All">
     <meta name="twitter:image" content="https://goldenapplecoders-coder.github.io/favicon.ico">
     <link rel="icon" href="https://goldenapplecoders-coder.github.io/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="https://goldenapplecoders-coder.github.io/favicon.ico" type="image/x-icon">
@@ -33,7 +33,7 @@
       "name": "Golden Apple Technologies",
       "url": "https://goldenapplecoders-coder.github.io",
       "logo": "https://goldenapplecoders-coder.github.io/favicon.ico",
-      "description": "A comprehensive developer hub with tools and resources for programmers",
+      "description": "Golden Apple Technologies - A Great Team Of Developers, Code Oriented, Delighted to teach Programming To All",
       "sameAs": [
         "https://goldenapplecoders-coder.github.io"
       ]
@@ -226,7 +226,7 @@
     <i class="fas fa-barcode"></i>  BARCODE GENERATOR</button>
       <button class="tool" onclick="location.href='compiler_html.html'">
     <i class="fab fa-html5"></i>  HTML COMPILER</button>
-      <button class="tool" onclick="location.href='https://tum-code.github.io/univ.html'">
+      <button class="tool" onclick="location.href='https://tum-code.github.io/document_creator.html'">
     <i class="fas fa-file-text"></i>  DOCUMENT CREATOR</button>
       <button class="tool" onclick="location.href='drive.html'">
     <i class="fas fa-cloud"></i>  GOLDRIVE CLOUD</button>
